// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/kanban/kanbanColumnHeader return kanbanColumnHeader and click on menuwrapper 1`] = `
<div>
  <div
    class="octo-board-header-cell KanbanColumnHeader"
    draggable="true"
    style="opacity: 1;"
  >
    <span
      class="Label propColorDefault "
    >
      <input
        class="Editable "
        placeholder="New Select"
        spellcheck="true"
        title="Title"
        value="Title"
      />
    </span>
    <div
      class="KanbanCalculation"
    >
      <button
        class="Button"
        title="0"
        type="button"
      >
        <span>
          0
        </span>
      </button>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened"
      role="button"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect bottom "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                aria-label="Hide"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <svg
                      class="HideIcon Icon"
                      viewBox="0 0 640 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M634 471L36 3.51A16 16 0 0 0 13.51 6l-10 12.49A16 16 0 0 0 6 41l598 467.49a16 16 0 0 0 22.49-2.49l10-12.49A16 16 0 0 0 634 471zM296.79 146.47l134.79 105.38C429.36 191.91 380.48 144 320 144a112.26 112.26 0 0 0-23.21 2.47zm46.42 219.07L208.42 260.16C210.65 320.09 259.53 368 320 368a113 113 0 0 0 23.21-2.46zM320 112c98.65 0 189.09 55 237.93 144a285.53 285.53 0 0 1-44 60.2l37.74 29.5a333.7 333.7 0 0 0 52.9-75.11 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64c-36.7 0-71.71 7-104.63 18.81l46.41 36.29c18.94-4.3 38.34-7.1 58.22-7.1zm0 288c-98.65 0-189.08-55-237.93-144a285.47 285.47 0 0 1 44.05-60.19l-37.74-29.5a333.6 333.6 0 0 0-52.89 75.1 32.35 32.35 0 0 0 0 29.19C89.72 376.41 197.08 448 320 448c36.7 0 71.71-7.05 104.63-18.81l-46.41-36.28C359.28 397.2 339.89 400 320 400z"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Hide
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Delete"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Delete
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
              <div
                class="MenuOption MenuSeparator menu-separator"
              />
              <div
                aria-label="Select Default Color"
                class="MenuOption ColorOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Default
                </div>
                <div
                  class="menu-colorbox propColorDefault"
                />
              </div>
              <div
                aria-label="Select Gray Color"
                class="MenuOption ColorOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Gray
                </div>
                <div
                  class="menu-colorbox propColorGray"
                />
              </div>
              <div
                aria-label="Select Brown Color"
                class="MenuOption ColorOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Brown
                </div>
                <div
                  class="menu-colorbox propColorBrown"
                />
              </div>
              <div
                aria-label="Select Orange Color"
                class="MenuOption ColorOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Orange
                </div>
                <div
                  class="menu-colorbox propColorOrange"
                />
              </div>
              <div
                aria-label="Select Yellow Color"
                class="MenuOption ColorOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Yellow
                </div>
                <div
                  class="menu-colorbox propColorYellow"
                />
              </div>
              <div
                aria-label="Select Green Color"
                class="MenuOption ColorOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Green
                </div>
                <div
                  class="menu-colorbox propColorGreen"
                />
              </div>
              <div
                aria-label="Select Blue Color"
                class="MenuOption ColorOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Blue
                </div>
                <div
                  class="menu-colorbox propColorBlue"
                />
              </div>
              <div
                aria-label="Select Purple Color"
                class="MenuOption ColorOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Purple
                </div>
                <div
                  class="menu-colorbox propColorPurple"
                />
              </div>
              <div
                aria-label="Select Pink Color"
                class="MenuOption ColorOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Pink
                </div>
                <div
                  class="menu-colorbox propColorPink"
                />
              </div>
              <div
                aria-label="Select Red Color"
                class="MenuOption ColorOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Red
                </div>
                <div
                  class="menu-colorbox propColorRed"
                />
              </div>
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="IconButton"
      type="button"
    >
      <i
        class="CompassIcon icon-plus AddIcon"
      />
    </button>
  </div>
</div>
`;

exports[`src/components/kanban/kanbanColumnHeader return kanbanColumnHeader and edit title 1`] = `
<div>
  <div
    class="octo-board-header-cell KanbanColumnHeader"
    draggable="true"
    style="opacity: 1;"
  >
    <span
      class="Label propColorDefault "
    >
      <input
        class="Editable "
        placeholder="New Select"
        spellcheck="true"
        title="New Title"
        value="New Title"
      />
    </span>
    <div
      class="KanbanCalculation"
    >
      <button
        class="Button"
        title="0"
        type="button"
      >
        <span>
          0
        </span>
      </button>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
    </div>
    <button
      class="IconButton"
      type="button"
    >
      <i
        class="CompassIcon icon-plus AddIcon"
      />
    </button>
  </div>
</div>
`;

exports[`src/components/kanban/kanbanColumnHeader should match snapshot 1`] = `
<div>
  <div
    class="octo-board-header-cell KanbanColumnHeader"
    draggable="true"
    style="opacity: 1;"
  >
    <span
      class="Label propColorDefault "
    >
      <input
        class="Editable "
        placeholder="New Select"
        spellcheck="true"
        title="Title"
        value="Title"
      />
    </span>
    <div
      class="KanbanCalculation"
    >
      <button
        class="Button"
        title="0"
        type="button"
      >
        <span>
          0
        </span>
      </button>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
    </div>
    <button
      class="IconButton"
      type="button"
    >
      <i
        class="CompassIcon icon-plus AddIcon"
      />
    </button>
  </div>
</div>
`;

exports[`src/components/kanban/kanbanColumnHeader should match snapshot readonly 1`] = `
<div>
  <div
    class="octo-board-header-cell KanbanColumnHeader"
    draggable="true"
    style="opacity: 1;"
  >
    <span
      class="Label propColorDefault "
    >
      <input
        class="Editable readonly "
        placeholder="New Select"
        readonly=""
        spellcheck="true"
        title="Title"
        value="Title"
      />
    </span>
    <div
      class="KanbanCalculation"
    >
      <button
        class="Button"
        title="0"
        type="button"
      >
        <span>
          0
        </span>
      </button>
    </div>
    <div
      class="octo-spacer"
    />
  </div>
</div>
`;
